--- a/Frontend/eduka-interface/src/app/createroom/createroom.component.html
+++ b/Frontend/eduka-interface/src/app/createroom/createroom.component.html
@@ -2,18 +2,21 @@
 	<div class="createroom-container">
 		<h1>Create Room</h1>
 		<hr>
+		<div class="alert alert-danger" role="alert" *ngIf="errorMsg">
+      		{{errorMsg}}
+    	</div>
 		<div class="row">	
 			<div class="input-field col s6 m4 l4">
-				<input type="text" name="roomname" placeholder="Room Name">
+				<input type="text" [(ngModel)]="roomName" placeholder="Room Name">
 			</div>
 		</div>
 		<div class="row">	
 			<div class="input-field col s6 m4 l4">
-				<textarea id="textarea1" class="materialize-textarea" placeholder="Description"></textarea>			
+				<textarea id="textarea1" [(ngModel)]="roomDescription" class="materialize-textarea" placeholder="Description"></textarea>			
 			</div>
 		</div>
 		<div class="row">
-			<button class="btn-large waves-effect eduka-pink" type="submit" name="createRoom">Create Room</button>
+			<button (click)="createRoom()"class="btn-large waves-effect eduka-pink" type="submit" name="createRoom">Create Room</button>
 		</div>	
 	</div>
 </div>
