design chat in channel page

--- a/Frontend/eduka-interface/src/app/room/room.component.html
+++ b/Frontend/eduka-interface/src/app/room/room.component.html
@@ -22,23 +22,6 @@
 
 
   <div class="container-fluid mycontainer">
-    <!--      <div class="row content">-->
-    <!--        <div class="col-md-12">-->
-    <!--          <div class="room-name-container">-->
-    <!--            <div class="valign-wrapper">-->
-    <!--              <h5><b>Room Name</b></h5> &nbsp;<h6><i>#RoomCode</i></h6>-->
-    <!--            </div>-->
-    <!--          </div>-->
-    <!--        </div>-->
-    <!--    <div class="col-md-12">-->
-    <!--      <div class="room-name-container">-->
-    <!--        <div class="valign-wrapper">-->
-    <!--          <h5>Channel Name</h5>-->
-    <!--        </div>-->
-    <!--      </div>-->
-    <!--    </div>-->
-    <!--      </div>-->
-
     <div class="row">
       <div class="col-md-12">
         <h1 class="room-name">Room 1 #ABCDE</h1>
@@ -55,6 +38,7 @@
           </div>
           <div class="chat-box">
           </div>
+          <input type="text" class="message-box" placeholder="type your message here...">
         </div>
       </div>
     </div>
