--- a/Frontend/eduka-interface/src/app/room/room.component.scss
+++ b/Frontend/eduka-interface/src/app/room/room.component.scss
@@ -39,7 +39,7 @@
   //border-style: solid;
   //border-color: #fe47aa;
   //border-width: 5px;
-  height: 600px;
+  height: 655px;
   width: 31.85%;
   background-color: #575e68;
   overflow-y: scroll;
@@ -100,6 +100,17 @@
   }
 }
 
+.message-box {
+  float: right;
+  width: 65.5%;
+  height: 25px;
+  background-color: white;
+  color: black;
+  padding: 15px;
+  margin-top: -59px;
+  margin-left: -35px;
+}
+
 .chat-box::-webkit-scrollbar {
   width: 10px;
 }
@@ -130,7 +141,7 @@
   text-align: center;
   border-top: 0.5em solid #5385c1;
   width: 100%;
-  height: 160vh;
+  height: 180vh;
   position: relative;
   z-index: -1000;
 }
