--- a/Frontend/eduka-interface/src/app/room/room.component.html
+++ b/Frontend/eduka-interface/src/app/room/room.component.html
@@ -8,7 +8,7 @@
             <a href="#" class="logo" routerLink="/">Educom</a>
             <nav id="nav" class="navigation">
               <a href="/">Home</a>
-              <a href="#" routerLink="/logout">Logout</a>
+              <a href="#" (click)="logout()">Logout</a>
             </nav>
             <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
           </div>
