--- a/Frontend/eduka-interface/src/app/app.component.scss
+++ b/Frontend/eduka-interface/src/app/app.component.scss
@@ -8,7 +8,7 @@
 // 		li {
 // 			a {
 // 				color: black;
-// 				font-size: 1.2em;	
+// 				font-size: 1.2em;
 // 			}
 // 		}
 // 	}
@@ -21,3 +21,23 @@
 // 	border-width: 2px;
 // 	margin-top: -1px;
 // }
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: #000000;
+  animation: spinner .8s linear infinite;
+}
