--- a/Frontend/eduka-interface/src/app/login/login.component.scss
+++ b/Frontend/eduka-interface/src/app/login/login.component.scss
@@ -1,3 +1,24 @@
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: #000000;
+  animation: spinner .8s linear infinite;
+}
+
 .login-page{
   width: 100%;
   //height: 100%;
