validate user session & add loading animation

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -8,7 +8,7 @@
           <a href="/">Home</a>
           <a href="#features">Features</a>
           <a href="#about">About</a>
-          <a href="#" routerLink="/login">Sign In</a>
+          <a href="#" routerLink="/login">Log In</a>
         </nav>
         <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
       </div>
