--- a/Frontend/eduka-interface/src/app/joinroom/joinroom.component.html
+++ b/Frontend/eduka-interface/src/app/joinroom/joinroom.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-	<div class="joinroom-container">
-		<h1>Join Room</h1>
-		<hr>
+  <div class="joinroom-container">
+    <h1>Join Room</h1>
+    <hr>
 
     <br>
     <div class="alert alert-danger" role="alert" *ngIf="errorMsg">
@@ -9,13 +9,15 @@
     </div>
 
     <div class="row">
-			<div class="input-field col s6 m4 l4">
-				<input type="text" [(ngModel)]="roomCode" placeholder="Room Code">
-			</div>
-		</div>
+      <div class="input-field col s6 m4 l4">
+        <input type="text" [(ngModel)]="roomCode" placeholder="Room Code">
+      </div>
+    </div>
 
-		<div class="row">
-			<button class="btn-large waves-effect eduka-pink" type="submit" name="createRoom" (click)="joinRoom()">Join Room</button>
-		</div>
-	</div>
+    <div class="row">
+      <button class="btn-large waves-effect eduka-pink" type="submit" name="createRoom" (click)="joinRoom()"
+              [class.spinner]="loading" [disabled]="loading">Join Room
+      </button>
+    </div>
+  </div>
 </div>
