channel chat version 1

--- a/Frontend/eduka-interface/src/app/room/room.component.html
+++ b/Frontend/eduka-interface/src/app/room/room.component.html
@@ -37,6 +37,16 @@
             <button class="waves-effect">#Announcements</button>
           </div>
           <div class="chat-box">
+            <div class="sent-message">
+              <!-- <img src="/w3images/bandmember.jpg" alt="Avatar"> -->
+              <p><b>Hengky</b> Hello. How are you today?</p>
+              <span class="time-right">11:00</span>
+            </div>
+            <div class="sent-message">
+              <!-- <img src="/w3images/bandmember.jpg" alt="Avatar"> -->
+              <p><b>Ryan</b> I am good sir</p>
+              <span class="time-right">11:01</span>
+            </div>
           </div>
           <input type="text" class="message-box" placeholder="type your message here...">
         </div>
