--- a/Frontend/eduka-interface/src/app/room/room.component.scss
+++ b/Frontend/eduka-interface/src/app/room/room.component.scss
@@ -100,6 +100,92 @@
   }
 }
 
+.sent-message {
+  // width: 100%;
+  // height: 4%;
+  // background-color: white;
+  // border-style: solid;
+  // border-color: black;
+  // color: black;
+  // border-top-width: 1px;
+  // border-left-width: 1px;
+  // border-right-width: 1px;
+  // border-bottom-width: 0.5px;
+  // h6 {
+  //   color: black;
+  //   display: inline;
+  // }
+  // p {
+  //   display: inline;
+  // }
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+/* Clear floats */
+.sent-message::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Style images */
+.sent-message img {
+  float: left;
+  max-width: 60px;
+  width: 100%;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+/* Style the right image */
+.sent-message img.right {
+  float: right;
+  margin-left: 20px;
+  margin-right:0;
+}
+
+/* Style time text */
+.time-right {
+  float: right;
+  color: #aaa;
+}
+
+/* Style time text */
+.time-left {
+  float: left;
+  color: #999;
+}
+.username-text {
+    margin-top: 25%;
+    font-family: Verdana;
+    margin-left: 0.5vw;
+    margin-top: 1%;
+  }
+
+.user-message {
+    font-family: Verdana;
+    margin-left: 0.5vw;
+    margin-top: 1%;
+}
+
+.message {
+  width: 100%;
+  background-color: white;
+  border-style: solid;
+  border-color: black;
+  color: black;
+  border-top-width: 0px;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-bottom-width: 1px;
+  padding-left: 1%; 
+}
+
+
 .message-box {
   float: right;
   width: 65.5%;
