--- a/Frontend/eduka-interface/src/app/createchannel/createchannel.component.html
+++ b/Frontend/eduka-interface/src/app/createchannel/createchannel.component.html
@@ -2,16 +2,16 @@
 	<div class="createchannel-container">
 		<h1>Create Room</h1>
 		<hr>
-<!-- 		<div class="alert alert-danger" role="alert" *ngIf="errorMsg">
+		<div class="alert alert-danger" role="alert" *ngIf="errorMsg">
       		{{errorMsg}}
-    	</div> -->
+    	</div>
 		<div class="row">
 			<div class="input-field col s6 m4 l4">
-				<input type="text" [(ngModel)]="channelName" placeholder="Room Name">
+				<input type="text" [(ngModel)]="channelName" placeholder="Channel Name">
 			</div>
 		</div>
-<!-- 		<div class="row">
+		<div class="row">
 			<button (click)="createChannel()"class="btn-large waves-effect eduka-pink" type="submit" name="createChannel" [class.spinner]="loading" [disabled]="loading">Create Channel</button>
-		</div> -->
+		</div>
 	</div>
 </div>
