--- a/Frontend/eduka-interface/src/app/room/room.component.scss
+++ b/Frontend/eduka-interface/src/app/room/room.component.scss
@@ -71,7 +71,7 @@
   background-color: white;
   color: black;
   padding: 15px;
-  position: absolute;  
+  position: absolute;
   height: 55px;
   bottom: 0;
   left: 1;
@@ -96,7 +96,7 @@
   //margin-right: 9%;
   //border-color: #fe47aa;
   //border-width: 5px;
-  height: 600px;
+  height: 550px;
   width: 68%;
   background-color: #575e68;
   overflow-y: scroll;
@@ -121,7 +121,7 @@
     background-color: #f1f1f1;
     border-radius: 5px;
     padding: 10px;
-    margin: 10px 0;
+    margin: 10px 5px;
     margin-top: 5px;
 }
 
@@ -182,7 +182,7 @@
   border-left-width: 1px;
   border-right-width: 1px;
   border-bottom-width: 1px;
-  padding-left: 1%; 
+  padding-left: 1%;
 }
 
 
