fix channels and message in room

--- a/Frontend/eduka-interface/src/app/room/room.component.html
+++ b/Frontend/eduka-interface/src/app/room/room.component.html
@@ -24,7 +24,7 @@
   <div class="container-fluid mycontainer">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="room-name">Room 1 #ABCDE</h1>
+        <h1 class="room-name">{{currentRoom.name }} <i [style.font-size]="'19px'">#{{currentRoom.roomCode}}</i></h1>
       </div>
     </div>
 
