add language translation

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -46,7 +46,7 @@
       </article>
       <article>
         <header>
-          <h3>Email<br/> notification announcement</h3>
+          <h3>Translation<br/> language translation</h3>
         </header>
         <img src="../../assets/homepage/bg-image8.jpg" alt="" width="200px">
         <p style="color: gray;margin-top:15px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
