changed api calls URLs

--- a/Frontend/eduka-interface/src/app/home/home.component.html
+++ b/Frontend/eduka-interface/src/app/home/home.component.html
@@ -129,7 +129,7 @@
     <header class="align-center">
       <h2>Get Started</h2>
       <p>Let's start collaborate with your friends!</p>
-      <a href="/login" class="button special">Log In</a>
+      <a routerLink="/login" class="button special">Log In</a>
     </header>
   </div>
 </section>
